# rtmplivestream

./: CMakeLists.txt
src/: rtmp-stream.cpp  testCamera.cpp
